# analytic_trading_service

./: .env.example  .gitignore  LICENSE.MD  README.MD  pyproject.toml
.github/workflow/: main.yml
.github/workflows/: main.yml
rep/1752026194/: strategy_performance_ETHUSDT_2025-06-20_2025-06-21.csv
rep/1752026915/: strategy_performance_ETHUSDT_2025-06-20_2025-06-21.csv
reports/1751971174/: strategy_performance_ETHUSDT_2025-06-20_2025-06-21.csv
src/: __init__.py  main.py
src/application/: _backtest_data.py  _backtest_param_parser.py  _exceptions.py  archive_processor.py  backtest_runner.py  contracts.py  stream_analyze_service.py  stream_processor.py  stream_strategy_processor.py  trade_processor.py
src/application/commands/: collect_kline_api_data.py  collect_kline_ws_data.py  collect_orderbook_api_data.py  collect_orderbook_ws_data.py
src/application/handlers/: collect_kline_api_data_handler.py  collect_kline_ws_data_handler.py  collect_orderbook_api_data_handler.py  collect_orderbook_ws_data_handler.py
src/application/services/: data_pipeline_service.py  event_publisher.py  kline_data_collector.py  orderbook_data_collector.py
src/domain/: _delta_calculator.py  _exceptions.py  constants.py  delta_analyzer.py
src/domain/events/: data_events.py
src/domain/strategies/: base_strategy_utils.py  strategies.py  strategy_default_settings.py  stream_signal.py
src/domain/utilits/: interval.py
src/infrastructure/: __init__.py  logging_config.py
src/infrastructure/adapters/: _datasets_parser.py  archive_kline_parser.py  (+2 more)
src/test/: test_data.py
(+23 files in other folders)
